# coastal-dynamics

./: .gitignore  README.md  benchmark.record.json  coastal_validation_report.md  pyproject.toml  readme.md  requirements.txt
benchmark/: report.md
coastal_dynamics/executor/: __init__.py  coastal_benchmark_executor.py  coastal_raster_executor.py  coastal_validation_executor.py  coastal_vector_executor.py
coastal_dynamics/raster/: flood_model.py  mangrove_model.py
coastal_dynamics/vector/: flood_model.py  mangrove_model.py  mangue_model.py
data/elevacao_pol/: elevacao_pol_result.tif
examples/: main_benchmark.py  main_raster.py  main_vector.py  model.toml  prepare_raster.py  run_raster.py  run_vector.py  validate_coastal.py
examples/data/: result.tif  synthetic_grid_60x60_tiff_result.tif
examples/data/input/: ilha_maranhao_epsg31983.record.json  ilha_maranhao_epsg31983.tif  profiling_dba56dab.md
experiments/13b68389cec147c88306b6dc0688a8c7/validation/: report.md
experiments/14d29478841b4b6da2bb4b831c7ac889/validation/: report.md
outputs/experiments/115320b85e884149ba32474d73dcd87d/validation/: report.md
outputs/experiments/6ef70b122bb646069ebabb519322cbab/validation/: report.md
outputs/validation_f0f095329c1e42cc99259775be8d9d75/: report.md
validate/: coastal_validation_executor.py  coastal_validation_report.md  validate_coastal _gem copy.py  validate_coastal.py  validate_coastal_gem copy.py  validate_coastal_gem.py
validate/outputs/validation_95cdeed2-149b-472c-b57a-060cfcdeda45/: report.md
(+1 files in other folders)
