[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coastal-dynamics"
version = "0.1.0"
description = "Coastal flood and mangrove migration models built on DisSModel"
readme = "readme.md"
authors = [{ name = "Sergio Souza Costa", email = "sergio@ufma.br" }]
license = { text = "MIT" }
dependencies = [
    "dissmodel @ git+https://github.com/LambdaGeo/dissmodel.git@executor",
    "numpy>=1.23.0",
    "geopandas>=0.12.0",
    "rasterio>=1.3.0",
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/lambdageo/coastal-dynamics"
Documentation = "https://lambdageo.github.io/coastal-dynamics"

[tool.setuptools.packages.find]
where = ["."]
include = ["coastal_dynamics*"]
